--- a/index.html
+++ b/index.html
@@ -2,31 +2,32 @@
 <html lang="en" data-theme="light">
 
 <head>
-    <title>John Doe | Home</title>
+    <title>Talwinder Singh | Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"
-        content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
+        content="talwinder, full stack developer, frontend, backend, react, html, css, js, jquery, nodejs, mysql, bootstrap" />
     <meta name="description"
-        content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
+        content="" />
     <!-- Robot.txt -->
     <meta name="robots" content="index,follow" />
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
 
-    <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/">
-    <meta property="og:title" content="John Doe | Home">
+    <meta property="og:site_name" content="url">
+    <meta property="og:title" content="Talwinder Singh | Home">
     <meta property="og:description"
-        content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
+        content="">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://portfolio.smaranjitghose.codes/">
+    <meta property="og:url" content="url">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/">
+    <meta name="twitter:site" content="url">
 
-    <meta name="application-name" content="John Doe | Home" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Home" />
+    <meta name="application-name" content="Talwinder Singh | Home" />
+    <meta name="apple-mobile-web-app-title" content="Talwinder Singh | Home" />
     <meta name="summary"
-        content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
+        content="" />
+
     <!--For Dark/Light mode Toggle-->
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
     <!--Import Google Icon Font-->
@@ -96,31 +97,31 @@
             </div>
     </section>
     </div>-->
-    <div class="text center col-sm-6">Hi 👋,I'm <span>John Doe</span>
+    <div class="text center col-sm-6">Hi 👋, I'm <span>Talwinder Singh</span>
         <div class="center">
             <div>
                 <img src="assets/images/dp.svg" alt="" class="rounded-circle" height="200" width="200">
             </div>
                 <p>I am into &nbsp;
                 <h1 class="animated-text"
-                    data-words="Designing, UI/UX, Cloud Computing, Web Development, Open Source, Mentoring"></h1>
+                    data-words="Web Development, Open Source, Designing, UI/UX"></h1>
                 </p>
             <div>
                 <div class="social-icons">
 
-                    <a class="social-icon twitter" href="" target="_blank" rel="author">
+                    <a class="social-icon twitter" href="https://twitter.com/iam_talwinder" target="_blank" rel="author">
                         <i class="fab fa-twitter"></i>
                     </a>
 
-                    <a class="social-icon medium" href="" target="_blank" rel="author">
+                    <a class="social-icon medium" href="https://medium.com/@iamtalwinder" target="_blank" rel="author">
                         <i class="fab fa-medium-m"></i>
                     </a>
 
-                    <a class="social-icon linkedin" href="" target="_blank" rel="author">
+                    <a class="social-icon linkedin" href="https://www.linkedin.com/in/iamtalwinder" target="_blank" rel="author">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
 
-                    <a class="social-icon github" href="" target="_blank" rel="author">
+                    <a class="social-icon github" href="https://github.com/iamtalwinder" target="_blank" rel="author">
                         <i class="fab fa-github"></i>
                     </a>
 
