--- a/projects.html
+++ b/projects.html
@@ -1,102 +1,125 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
+  <head>
+    <title>Talwinder Singh | Projects</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="talwinder, full stack developer, frontend, backend, react, html, css, js, jquery, nodejs, mysql, bootstrap"
+    />
+    <meta name="description" content="" />
+    <!-- Fetching our Google Tag Manager -->
+    <!-- Robot.txt -->
+    <meta name="robots" content="index,follow" />
+    <meta name="Googlebot" content="index,follow" />
+    <meta name="AdsBot-Google" content="index,follow" />
 
-<head>
-  <title>John Doe | Projects</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords"
-    content="free portfolio template,portfolio template, portfolio website template, open source and contribution to open source" />
-  <meta name="description"
-    content="This project serves as a free and beautiful portfolio template for everyone who needs the perfect portfolio. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world." />
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167979537-2"></script>
-  <!-- Fetching our Google Tag Manager -->
-  <!-- Robot.txt -->
-  <meta name="robots" content="index,follow" />
-  <meta name="Googlebot" content="index,follow" />
-  <meta name="AdsBot-Google" content="index,follow" />
+    <meta property="og:site_name" content="url" />
+    <meta property="og:title" content="Talwinder Singh | Home" />
+    <meta property="og:description" content="" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="url" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="url" />
 
-  <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/projects.html">
-  <meta property="og:title" content="John Doe | Projects">
-  <meta property="og:description"
-    content="This project serves as a free and beautiful portfolio template for everyone who needs the perfect portfolio. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://portfolio.smaranjitghose.codes/projects.html">
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/projects.html">
+    <meta name="application-name" content="Talwinder Singh | Projects" />
+    <meta
+      name="apple-mobile-web-app-title"
+      content="Talwinder Singh | Projects"
+    />
+    <meta name="summary" content="" />
 
-  <meta name="application-name" content="John Doe | Projects" />
-  <meta name="apple-mobile-web-app-title" content="John Doe | Projects" />
-  <meta name="summary"
-    content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!--For Dark/Light mode Toggle-->
-  <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
-  <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="assets/css/materialize.min.css" media="screen,projection" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap" rel="stylesheet">
-  <!--Import animation.css-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
-  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-  <link rel="stylesheet" type="text/css" href="assets/css/project.css" />
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-  <link rel="icon" href="assets/images/favicon.png" type="image/png"> <!--Favicon-->
-</head>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!--For Dark/Light mode Toggle-->
+    <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
+    <!--Import materialize.css-->
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="assets/css/materialize.min.css"
+      media="screen,projection"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap"
+      rel="stylesheet"
+    />
+    <!--Import animation.css-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+    />
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/project.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <link rel="icon" href="assets/images/favicon.png" type="image/png" />
+    <!--Favicon-->
+  </head>
 
-<body>
+  <body>
+    <!--Dynamic Nav Bar-->
 
-  <!--Dynamic Nav Bar-->
+    <!-- button for the top -->
+    <a class="arrow-up" id="myBtn" onclick="topFunction()">
+      <span class="left-arm"></span>
+      <span class="right-arm"></span>
+      <span class="arrow-slide"></span>
+    </a>
 
-  <!-- button for the top -->
-  <a class="arrow-up" id="myBtn" onclick="topFunction()">
-    <span class="left-arm"></span>
-    <span class="right-arm"></span>
-    <span class="arrow-slide"></span>
-  </a>
-
-
-
-  <div class="container" style="width: 100%; min-height: 80%;">
-    <section style=" height: 70vh;">
-      <div class="px-3 pt-5">
-        <div class="row text-dark">
-          <div
-            class="col-md-6 d-flex mt-5 flex-column text-center justify-content-center animate__animated animate__zoomIn animate__delay-1s">
-            <h2 class="main-heading mb-0">Projects</h2>
-            <p class="pre-heading font-weight-bolder"
-              class="mb-0 mt-3 text-center animate__animated animate__zoomIn animate__delay-2s">
-              My projects makes use of vast variety of latest technology tools. My best experience is to create Data
-              Science projects and deploy them to web applications using cloud infrastructure.
-            </p>
-          </div>
-          <div class="col-md-6" style="margin-top: 10px;">
-            <img class="img-header img-fluid d-block img-fluid d-block  animate__animated animate__zoomIn animate__delay-1s"" src="
+    <div class="container" style="width: 100%; min-height: 80%">
+      <section style="height: 70vh">
+        <div class="px-3 pt-5">
+          <div class="row text-dark">
+            <div
+              class="col-md-6 d-flex mt-5 flex-column text-center justify-content-center animate__animated animate__zoomIn animate__delay-1s"
+            >
+              <h2 class="main-heading mb-0">Projects</h2>
+              <p
+                class="pre-heading font-weight-bolder"
+                class="mb-0 mt-3 text-center animate__animated animate__zoomIn animate__delay-2s"
+              >
+                My projects make use of a variety of the latest technology. My
+                best experience is to create full-stack web applications and
+                deploy them using cloud infrastructure.
+              </p>
+            </div>
+            <div class="col-md-6" style="margin-top: 10px">
+              <img class="img-header img-fluid d-block img-fluid d-block
+              animate__animated animate__zoomIn animate__delay-1s"" src="
               ./assets/images/project-page/header.svg">
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <div class="container-fluid project-box">
-      <div class="row card-margin page-content projectcards">
-        <!-- Dynamic project card -->
+      <div class="container-fluid project-box">
+        <div class="row card-margin page-content projectcards">
+          <!-- Dynamic project card -->
+        </div>
       </div>
     </div>
 
-  </div>
+    <!-- Dynamic footer section -->
 
-  <!-- Dynamic footer section -->
-
-  <!-- script -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="assets/js/materialize.min.js"></script>
-  <script src="assets/js/main.js"></script>
-  <script src="assets/js/project.js"></script>
-
-</body>
-
+    <!-- script -->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script type="text/javascript" src="assets/js/materialize.min.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/project.js"></script>
+  </body>
 </html>
